<resources>
    <string name="app_name">Daily News</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>

    <string name="facebook_app_id">327263618361252</string>
    <string name="fb_login_protocol_scheme">fb327263618361252</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_google">Login With Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="search_latest_news">Search Latest News...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>


</resources>