<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/in">

    <TextView
        android:id="@+id/wel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.05"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        android:shadowColor="#F3E4E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/continue_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.05"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/continue_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="15dp"
            >
        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/materialripple2"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="#F44336"
                android:textAllCaps="false"
                />
        </com.balysv.materialripple.MaterialRippleLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="15dp"
            android:layout_marginStart="10dp">
        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/materialripple"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/skip"
                android:textSize="16sp"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:background="@color/white"
                android:textAllCaps="false"/>
        </com.balysv.materialripple.MaterialRippleLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/forget_password"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/btn_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/login_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:background="@drawable/shape_face"/>

    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_face"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_ui"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:background="@drawable/shape_google"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:shadowDx="0.2"
            android:shadowDy="0.2"
            android:shadowRadius="0.5"
            android:shadowColor="#F6E2E2"
            android:textColor="#DF3232"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:onClick="signUp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>