<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/in">



    <TextView
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        android:shadowColor="#F3E4E4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView_gallery"
            android:layout_width="100dp"
            android:layout_height="95dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_marginTop="10dp"
            android:src="@drawable/user" >

        </de.hdodenhof.circleimageview.CircleImageView>

        <ImageView
            android:id="@+id/img_gall"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/gallery"
            app:layout_constraintHorizontal_bias="0.705"

            android:layout_alignRight="@id/imageView_gallery"
            android:layout_alignBottom="@id/imageView_gallery"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_name_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_pass_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_pass_con_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_pass_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="Confirm Password"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        android:paddingLeft="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass_con_create"
        app:cardCornerRadius="15dp">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/materialripple2">
    <Button
        android:textSize="16sp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F44336"
        android:textAllCaps="false"
         />
        </com.balysv.materialripple.MaterialRippleLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lay_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/txt_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:shadowDx="0.2"
            android:shadowDy="0.2"
            android:shadowRadius="0.5"
            android:shadowColor="#F6E2E2"
            android:textColor="#DF3232"
            android:textSize="16sp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>